# vector-aws-secrets-helper

./: Cargo.toml  README.md
.github/workflows/: pr-created.yml
src/: main.rs  vector.rs
src/aws/: loader.rs  mod.rs  secretsmanager.rs  ssm.rs
