[package]
name = "vector-aws-secrets-helper"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = "abort"   # Abort on panic
strip = true      # Strip symbols from binary

[dependencies]
async-trait = "0.1.72"
aws-config = "0.56.0"
aws-sdk-secretsmanager = "0.29.0"
aws-sdk-ssm = "0.29.0"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt", "rt-multi-thread"] }
